--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             {
                 title: "测试音乐 1 (动感)",
                 artist: "SoundHelix",
-                file: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
+                file: "./周菌封宇宙第一牛逼.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
             },
             {
                 title: "测试音乐 2 (轻松)",
