--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
          */
         const songs = [
             {
-                title: "测试音乐 1 (动感)",
-                artist: "SoundHelix",
+                title: "周菌封宇宙第一牛逼",
+                artist: "时代俊峰",
                 file: "./周菌封宇宙第一牛逼.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
             },
             {
