--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 file: "./周菌封宇宙第一牛逼.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
             },
             {
-                title: "测试音乐 2 (轻松)",
-                artist: "SoundHelix",
-                file: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" // 这里替换为你的相对路径，例如: "./song2.mp3"
+                title: "《永恒的周菌封》",
+                artist: "哈基峰",
+                file: "./永恒的周菌封.mp3" // 这里替换为你的相对路径，例如: "./song2.mp3"
             },
             {
                 title: "测试音乐 3 (电子)",
