--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
                 file: "./周菌封宇宙第一牛逼.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
             },
             {
+                title: "周菌封升天",
+                artist: "时代俊峰",
+                file: "./周菌封升天.mp3" // 这里替换为你的相对路径，例如: "./song1.mp3"
+            },
+            {
                 title: "测试音乐 3 (电子)",
                 artist: "SoundHelix",
                 file: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" // 这里替换为你的相对路径，例如: "./song3.mp3"
